[gd_scene load_steps=90 format=3 uid="uid://chdov8i3q2250"]

[ext_resource type="Script" path="res://scripts/entities/characters/player/player_movement_logic.gd" id="1_v8myx"]
[ext_resource type="Texture2D" uid="uid://bc6asiykkbnww" path="res://assets/graphics/Characters/Knight/attack.png" id="2_acwhd"]
[ext_resource type="Texture2D" uid="uid://bptjfc81afssu" path="res://assets/graphics/Characters/Knight/slide.png" id="3_5cj8u"]
[ext_resource type="Texture2D" uid="uid://dyorf6rb3rtn4" path="res://assets/graphics/Characters/Knight/crouch_idle.png" id="3_8hd55"]
[ext_resource type="Texture2D" uid="uid://27tcmuhyhfgd" path="res://assets/graphics/Characters/Knight/fall.png" id="3_78tv7"]
[ext_resource type="Texture2D" uid="uid://dxql7f0ly2emt" path="res://assets/graphics/Characters/Knight/death.png" id="3_p4n6q"]
[ext_resource type="Texture2D" uid="uid://t32y5kyydlqt" path="res://assets/graphics/Characters/Knight/dash.png" id="3_sh5y6"]
[ext_resource type="Texture2D" uid="uid://cvfi0vdhm1xb1" path="res://assets/graphics/Characters/Knight/idle.png" id="4_7yjd7"]
[ext_resource type="Texture2D" uid="uid://cqvdpiuvjx6ho" path="res://assets/graphics/Characters/Knight/crouch_walk.png" id="4_ffos3"]
[ext_resource type="Texture2D" uid="uid://c4o5bxiabdy3" path="res://assets/graphics/Characters/Knight/jump.png" id="5_eha5h"]
[ext_resource type="Texture2D" uid="uid://cycvlms5mhknj" path="res://assets/graphics/Characters/Knight/run.png" id="6_ah3tr"]
[ext_resource type="Script" path="res://scripts/entities/characters/player/player_animation_logic.gd" id="7_0bd0t"]
[ext_resource type="Script" path="res://scripts/entities/characters/player/player_attack_logic.gd" id="8_kxulg"]
[ext_resource type="PackedScene" uid="uid://caw4hleiuypp1" path="res://scenes/entities/health_system.tscn" id="9_qysqu"]
[ext_resource type="AudioStream" uid="uid://yj3ydunmoakb" path="res://assets/sfx/entities/knight/walk.wav" id="12_dlewj"]
[ext_resource type="AudioStream" uid="uid://b6igin5q7if5i" path="res://assets/sfx/entities/knight/hurt.wav" id="13_cnn74"]
[ext_resource type="AudioStream" uid="uid://o6sbqul6tr78" path="res://assets/sfx/entities/knight/jump.wav" id="14_rprvl"]
[ext_resource type="AudioStream" uid="uid://gi6riq1ea1g3" path="res://assets/sfx/entities/knight/dash.wav" id="15_jnfs2"]
[ext_resource type="AudioStream" uid="uid://b7jseoar3c5tv" path="res://assets/sfx/entities/knight/death.wav" id="16_2xpya"]
[ext_resource type="AudioStream" uid="uid://bn4cxevo475oi" path="res://assets/sfx/entities/knight/attack1.wav" id="17_rynvc"]
[ext_resource type="AudioStream" uid="uid://mrly2t1v4ieo" path="res://assets/sfx/entities/knight/attack2.wav" id="18_1sniv"]
[ext_resource type="Texture2D" uid="uid://bf678x3xvtycp" path="res://assets/gui/EKeyIcon.png" id="19_7xdco"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8y8nc"]
atlas = ExtResource("2_acwhd")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l2f2"]
atlas = ExtResource("2_acwhd")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_12nyl"]
atlas = ExtResource("2_acwhd")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhtfb"]
atlas = ExtResource("2_acwhd")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4n6q"]
atlas = ExtResource("2_acwhd")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hy2cw"]
atlas = ExtResource("2_acwhd")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_teqxa"]
atlas = ExtResource("2_acwhd")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8y2s"]
atlas = ExtResource("2_acwhd")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmhkh"]
atlas = ExtResource("2_acwhd")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_33rjd"]
atlas = ExtResource("2_acwhd")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2178h"]
atlas = ExtResource("3_5cj8u")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5c58f"]
atlas = ExtResource("3_5cj8u")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1kos"]
atlas = ExtResource("3_8hd55")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrpyn"]
atlas = ExtResource("3_8hd55")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt6ym"]
atlas = ExtResource("3_8hd55")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ett7"]
atlas = ExtResource("4_ffos3")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_53355"]
atlas = ExtResource("4_ffos3")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_odxvu"]
atlas = ExtResource("4_ffos3")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gceq4"]
atlas = ExtResource("4_ffos3")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhus3"]
atlas = ExtResource("4_ffos3")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_47l3f"]
atlas = ExtResource("4_ffos3")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c72fw"]
atlas = ExtResource("4_ffos3")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bmaq"]
atlas = ExtResource("4_ffos3")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oogk7"]
atlas = ExtResource("3_sh5y6")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xsi3"]
atlas = ExtResource("3_sh5y6")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_15iyj"]
atlas = ExtResource("3_p4n6q")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcnc2"]
atlas = ExtResource("3_p4n6q")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvtyh"]
atlas = ExtResource("3_p4n6q")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1k5r"]
atlas = ExtResource("3_p4n6q")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gc6qe"]
atlas = ExtResource("3_p4n6q")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uvdo"]
atlas = ExtResource("3_p4n6q")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0gi4"]
atlas = ExtResource("3_p4n6q")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibgww"]
atlas = ExtResource("3_p4n6q")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj3qc"]
atlas = ExtResource("3_p4n6q")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ty74"]
atlas = ExtResource("3_p4n6q")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o70e3"]
atlas = ExtResource("3_78tv7")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_71586"]
atlas = ExtResource("3_78tv7")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_soivm"]
atlas = ExtResource("3_78tv7")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8onx"]
atlas = ExtResource("3_p4n6q")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5hdy"]
atlas = ExtResource("4_7yjd7")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccc5f"]
atlas = ExtResource("4_7yjd7")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg87j"]
atlas = ExtResource("4_7yjd7")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqxn6"]
atlas = ExtResource("4_7yjd7")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dehc3"]
atlas = ExtResource("4_7yjd7")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0mah"]
atlas = ExtResource("4_7yjd7")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqnnw"]
atlas = ExtResource("4_7yjd7")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iarm6"]
atlas = ExtResource("4_7yjd7")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpw32"]
atlas = ExtResource("4_7yjd7")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2mmw"]
atlas = ExtResource("4_7yjd7")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_040d8"]
atlas = ExtResource("5_eha5h")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldje4"]
atlas = ExtResource("5_eha5h")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wml2"]
atlas = ExtResource("5_eha5h")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1brir"]
atlas = ExtResource("6_ah3tr")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nf17y"]
atlas = ExtResource("6_ah3tr")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0yol"]
atlas = ExtResource("6_ah3tr")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxbsc"]
atlas = ExtResource("6_ah3tr")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qshr0"]
atlas = ExtResource("6_ah3tr")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tina1"]
atlas = ExtResource("6_ah3tr")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnrwe"]
atlas = ExtResource("6_ah3tr")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbwwf"]
atlas = ExtResource("6_ah3tr")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bv3m"]
atlas = ExtResource("6_ah3tr")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6gbb"]
atlas = ExtResource("6_ah3tr")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_v8nxm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y8nc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l2f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12nyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhtfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhtfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhtfb")
}],
"loop": false,
"name": &"attack_1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4n6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hy2cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teqxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8y2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmhkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33rjd")
}],
"loop": true,
"name": &"attack_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2178h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5c58f")
}],
"loop": true,
"name": &"crouch_dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1kos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrpyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt6ym")
}],
"loop": true,
"name": &"crouch_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ett7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53355")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odxvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gceq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhus3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47l3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c72fw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bmaq")
}],
"loop": true,
"name": &"crouch_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oogk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xsi3")
}],
"loop": true,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15iyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcnc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvtyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1k5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gc6qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uvdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0gi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibgww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj3qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ty74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ty74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ty74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ty74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ty74")
}],
"loop": false,
"name": &"death",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o70e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71586")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soivm")
}],
"loop": true,
"name": &"fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8onx")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5hdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccc5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg87j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqxn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dehc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0mah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqnnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iarm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpw32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2mmw")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_040d8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldje4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wml2")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1brir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf17y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0yol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxbsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qshr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tina1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnrwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbwwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bv3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6gbb")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cxwt"]
size = Vector2(18, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hakmi"]
size = Vector2(18, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_svhf8"]
size = Vector2(39, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmn0i"]
size = Vector2(14, 6)

[node name="player" type="Node2D"]
z_index = 5

[node name="player" type="CharacterBody2D" parent="."]
collision_mask = 135
floor_snap_length = 3.0
script = ExtResource("1_v8myx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="player"]
position = Vector2(1, -3)
sprite_frames = SubResource("SpriteFrames_v8nxm")
animation = &"idle"
autoplay = "idle"
centered = false
offset = Vector2(-56, -60)
script = ExtResource("7_0bd0t")

[node name="PlayerHitbox" type="CollisionShape2D" parent="player"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_3cxwt")

[node name="PlayerCrouchHitbox" type="CollisionShape2D" parent="player"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_hakmi")
disabled = true

[node name="AttackLogicContainer" type="Node2D" parent="player"]
position = Vector2(-45, -63)
script = ExtResource("8_kxulg")
damage = 2.0

[node name="Attack1_Hitbox" type="Area2D" parent="player/AttackLogicContainer"]
position = Vector2(75, 59)
collision_layer = 8
collision_mask = 2

[node name="Attack_1_Shape" type="CollisionShape2D" parent="player/AttackLogicContainer/Attack1_Hitbox"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_svhf8")
disabled = true

[node name="Attack1_Timer" type="Timer" parent="player/AttackLogicContainer"]
wait_time = 0.4
one_shot = true

[node name="Attack2_Timer" type="Timer" parent="player/AttackLogicContainer"]
wait_time = 0.4
one_shot = true

[node name="HealthSystem" parent="player" instance=ExtResource("9_qysqu")]
position = Vector2(-45, -63)
maxHealth = 10.0

[node name="SFXSounds" type="Node2D" parent="player"]

[node name="WalkSound" type="AudioStreamPlayer2D" parent="player/SFXSounds"]
stream = ExtResource("12_dlewj")
volume_db = -10.0
bus = &"SFX"

[node name="HurtSound" type="AudioStreamPlayer2D" parent="player/SFXSounds"]
stream = ExtResource("13_cnn74")
volume_db = -10.0
bus = &"SFX"

[node name="JumpSound" type="AudioStreamPlayer2D" parent="player/SFXSounds"]
stream = ExtResource("14_rprvl")
volume_db = -10.0
bus = &"SFX"

[node name="DashSound" type="AudioStreamPlayer2D" parent="player/SFXSounds"]
stream = ExtResource("15_jnfs2")
volume_db = -10.0
bus = &"SFX"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="player/SFXSounds"]
stream = ExtResource("16_2xpya")
volume_db = -10.0
bus = &"SFX"

[node name="Attack1Sound" type="AudioStreamPlayer2D" parent="player/SFXSounds"]
stream = ExtResource("17_rynvc")
volume_db = -10.0
bus = &"SFX"

[node name="Attack2Sound" type="AudioStreamPlayer2D" parent="player/SFXSounds"]
stream = ExtResource("18_1sniv")
volume_db = -10.0
bus = &"SFX"

[node name="UpperWallDetector" type="Area2D" parent="player"]
position = Vector2(0, -15)
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/UpperWallDetector"]
shape = SubResource("RectangleShape2D_wmn0i")

[node name="DialogIndicator" type="Sprite2D" parent="."]
visible = false
position = Vector2(11, -27)
scale = Vector2(0.33712, 0.255055)
texture = ExtResource("19_7xdco")

[connection signal="timeout" from="player/AttackLogicContainer/Attack1_Timer" to="player/AttackLogicContainer" method="_on_attack_1_timer_timeout"]
[connection signal="timeout" from="player/AttackLogicContainer/Attack2_Timer" to="player/AttackLogicContainer" method="_on_attack_2_timer_timeout"]
[connection signal="body_entered" from="player/UpperWallDetector" to="player" method="_on_upper_wall_detector_body_entered"]
[connection signal="body_exited" from="player/UpperWallDetector" to="player" method="_on_upper_wall_detector_body_exited"]
